2007-11-27  John W. Eaton  <jwe@octave.org>

	* image/image.m: Allow nargin == 0 case to work again.

2007-11-27  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_figure__.m: Force a multiplot mode with a
	colorbar, to ensure that the colorbar is on the canvas for png and
	postscipt outputs.

2007-11-26  David Bateman  <dbateman@free.fr>

	* sparse/spstats.m, statistics/base/mode.m: More care with sparse
	return values.

	* plot/plotyy.m: New function
	* plot/Makefile.in (SOURCES): Add it here.
	* plot/__go_draw_axes__.m: Force axis margins for plotyy. Set text
	color for {x|y|z}label and {x|y|z}tics. Also force the label of 
	{x|y}label to respect the axis position.
	* plot/xlabel.m, plot/ylabel.m, plot/zlabel.m: Accept an axis
	handle as the first argument.
	
	* pkg/pkg.m (pkg:install): When loading the installed packages
	index into installed_pkgs_lst and not descriptions..

	* plot/quiver3.m, plot/surfnorm.m, plot/__quiver__.m: New functions.
	* plot/Makefile.in (SOURCES): Add them to the sources.
	* plot/quiver.m: Modify to use __quiver__.m.

	* plot/hist.m: Avoid saturation when the x values are in an
	inetger type.

2007-11-26  Jason Riedy  <ejr@cs.berkeley.edu>

	* linear-algebra/condest.m, linear-algebra/onenormest.m: New
	functions.
	* linear-algebra/Makefile.in (SOURCES): Add them to the sources.

2007-11-26  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Prevent the cbrange from being of zero
	extent.

	* plot/colorbar.m: New function.
	* plot/Makefile.in (SOURCES): Add it to the sources.
	* plot/__go_draw_axes__.m: Calculate the colorbar position,
	precalculate the clim, set pm3d except for mesh.
	* plot/__contour__.m: Don't scale the contours to clim, but rather
	save the real values so that colorbar corresponds to the contour
	levels.

	* plot/stem.m: Set marker color the same as the line color. Draw 
	a single discontinous line object for the stems.

	* plot/sphere.m: New function ported from JHandles.